--- a/fend/package.json
+++ b/fend/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port $PORT",
+    "start": "npm run preview",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^4.6.2",
