--- a/fend/package.json
+++ b/fend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --host 0.0.0.0 --port $PORT",
-    "start": "npm run preview",
+    "start": "npm run build && npm run preview",
+    "serve": "npx serve -s dist -l $PORT",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -25,7 +26,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
